# BasicRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  bugs.txt  count.ps1  vcpkg-configuration.json  vcpkg.json  writeup_notes.txt
BRNifly/: CMakeLists.txt  LICENSE.md
BRNifly/cmake/: SyncUsdRuntime.cmake
BRNifly/src/: main.cpp
BasicRHI/: CMakeLists.txt  resource_states.h  rhi.h  rhi_allocator.cpp  rhi_allocator.h  rhi_allocator_config.h  rhi_allocator_pimpl_helpers.h  rhi_allocator_utils.h  rhi_colors.h  rhi_conversions_dx12.h  rhi_debug.h  rhi_dx12.cpp  rhi_dx12.h  rhi_dx12_casting.h  rhi_feature_info.h  rhi_helpers.h  rhi_interop.cpp  rhi_interop.h  rhi_interop_dx12.cpp  rhi_interop_dx12.h
BasicRHI/cmake/: BasicRHIConfig.cmake.in
BasicRenderer/: CMakeLists.txt  ffx_backend_dx12_x64.lib  ffx_backend_dx12_x64d.lib  ffx_backend_dx12_x64drel.lib  ffx_denoiser_x64drel.lib  ffx_sssr_x64.lib  ffx_sssr_x64d.lib  ffx_sssr_x64drel.lib  hlsl_parser.lib
BasicRenderer/cmake/: SyncTbbRuntime.cmake
BasicRenderer/generators/: resource_codegen.cpp
BasicRenderer/generators/templates/: BuiltinRenderPasses.h.json  BuiltinResources.h.json
BasicRenderer/include/: Animation.h  AnimationClip.h  AnimationController.h  BasicRenderer.h  BlendState.h  Buffer.h  BufferHandle.h  BufferView.h  CBuffer.h  Camera.h  CameraManager.h  Components.h  ComputePass.h  DX12Renderer.h  DebugRenderPass.h  DefaultDirection.h  DeletionManager.h  DescriptorHeap.h  DeviceManager.h  DynamicBuffer.h  DynamicBufferBase.h  DynamicResource.h  DynamicStructuredBuffer.h  ECSSystems.h  Filetypes.h  ForwardRenderPass.h  FrameResource.h  GlTFLoader.h  GloballyIndexedResource.h  HeapIndexInfo.h  IndirectCommand.h  IndirectCommandBufferManager.h  InputAction.h  InputContext.h  InputManager.h  Keyframe.h  LazyDynamicStructuredBuffer.h  Light.h  LightManager.h  ManagerInterface.h  (+56 more)
BasicRenderer/include/Aftermath/: GFSDK_Aftermath_Defines.h  GFSDK_Aftermath_GpuCrashDump.h  GFSDK_Aftermath_GpuCrashDumpDecoding.h
BasicRenderer/include/Animation/: Animation.h  AnimationClip.h  AnimationController.h  Skeleton.h
BasicRenderer/include/Buffers/: DynamicBuffer.h  DynamicStructuredBuffer.h
BasicRenderer/include/Concepts/: HasIsValid.h
BasicRenderer/include/DirectX/: d3dx12.h  dxcapi.h  dxcerrors.h  dxcisense.h
BasicRenderer/include/Factories/: TextureFactory.h
BasicRenderer/include/FidelityFX/: FfxBackendAdapters.h
BasicRenderer/include/Import/: AssimpGeometryExtractor.h  AssimpLoader.h  BRNiflyClient.h  CLodCache.h  CLodCacheLoader.h  Filetypes.h  GlTFGeometryExtractor.h  GlTFLoader.h  MeshData.h  MeshPreprocessData.h  NifLoader.h  USDGeometryExtractor.h  USDLoader.h  USDShaderGraphBuilder.h
BasicRenderer/include/Input/: InputContext.h
BasicRenderer/include/Interfaces/: IDynamicDeclaredResources.h  IHasMemoryMetadata.h  IPassBuilder.h  IResourceProvider.h  IResourceResolver.h  ISceneNodeObserver.h  ISetting.h
BasicRenderer/include/Managers/: CameraManager.h  CommandRecordingManager.h  EnvironmentManager.h  IndirectCommandBufferManager.h  InputManager.h  LightManager.h  ManagerInterface.h  MaterialManager.h  MeshManager.h  ObjectManager.h  ReadbackManager.h  SkeletonManager.h  ViewManager.h
BasicRenderer/include/Materials/: BlendState.h  Colorspaces.h  Material.h  MaterialBuckets.h  MaterialDescription.h  MaterialFlags.h  MaterialTextureStreaming.h  TechniqueDescriptor.h
BasicRenderer/include/Menu/: MemoryIntrospectionWidget.h  MemoryViewWidget.h  Menu.h  RenderGraphInspector.h
BasicRenderer/include/Mesh/: ClusterLODShaderTypes.h  ClusterLODTypes.h  ClusterLODUtilities.h  DefaultCLodSettings.h  Mesh.h  MeshInstance.h  VertexFlags.h  VertexLayout.h  VoxelGroupBuilder.h
BasicRenderer/include/Render/: CommandListPool.h  DescriptorHeap.h  DrawWorkload.h  IndirectCommand.h  IndirectWorkload.h  MemoryIntrospectionAPI.h  MemoryIntrospectionBackend.h  OpenPBRLookupResources.h  OutputTypes.h  PSOFlags.h  PassBuilders.h  PassInputs.h  PipelineState.h  RasterBucketFlags.h  RenderContext.h  RenderGraph.h  RenderGraphBuildHelper.h  RenderGraphBuilder.h  RenderGraphExtension.h  RenderPhase.h  RendererComponents.h  ResourceRegistry.h  ResourceRequirements.h  SceneFrameSnapshot.h  TonemapTypes.h  (+2 more)
BasicRenderer/shaders/: GTAO.hlsl  IBL.hlsli  PBR.hlsli  PBRUtilites.hlsli  PPLL.hlsl  VisUtil.hlsl  VisUtilEvaluate.hlsl  VisUtils.hlsl  XeGTAO.h  XeGTAO.hlsli  amplification.hlsl  blurEnvironment.hlsl  brdfIntegration.hlsl  cbuffers.hlsli  clusterLODPS.hlsl  clustering.hlsl  constants.hlsli  createRasterizeClustersCommand.hlsl  culling.hlsl  debug.hlsl  debugGrid.hlsl  deferred.hlsl  downsample.hlsl  dummyCompute.hlsl  envToCubemap.hlsl  frustrumCulling.hlsl  fullscreenVS.hlsli  gammaCorrection.hlsli  gbuffer.hlsl  lightCulling.hlsl  lighting.hlsli  loadingUtils.hlsli  materialFlags.hlsli  materialPrefixSum.hlsl  mesh.hlsl  meshletCulling.hlsl  objectCulling.hlsl  outputTypes.hlsli  shaders.hlsl  shadows.hlsli  (+11 more)
BasicRenderer/src/: AnimationClip.cpp  AnimationController.cpp  BasicRenderer.cpp  Buffer.cpp  Camera.cpp  CameraManager.cpp  CommandSignatureManager.cpp  DX12Renderer.cpp  DefaultDirection.cpp  DescriptorHeap.cpp  DeviceManager.cpp  DynamicBuffer.cpp  ECSManager.cpp  ECSSystems.cpp  FrameResource.cpp  GlTFLoader.cpp  IndirectCommandBufferManager.cpp  Light.cpp  LightManager.cpp  MaterialManager.cpp  MathUtils.cpp  MeshInstance.cpp  MeshManager.cpp  MeshUtilities.cpp  ModelLoader.cpp  NsightAftermathGpuCrashTracker.cpp  NsightAftermathShaderDatabase.cpp  ObjectManager.cpp  PSOManager.cpp  PixelBuffer.cpp  ReadbackManager.cpp  RenderGraph.cpp  RenderableObject.cpp  Renderer.cpp  RendererUtils.cpp  ResourceManager.cpp  Sampler.cpp  Scene.cpp  SceneNode.cpp  Skeleton.cpp  (+7 more)
BasicRenderer/tests/: ShaderPreprocessTests.cpp
BasicScene/: CMakeLists.txt
BasicScene/cmake/: BasicSceneConfig.cmake.in
BasicScene/src/: SceneWorldManager.cpp
CLodCacheTool/: CMakeLists.txt  main.cpp
OpenRenderGraph/: CMakeLists.txt  README.md
UsdPlugins/HttpResolver/: CMakeLists.txt  HttpResolver.cpp  HttpResolver.h
(+677 files in other folders)
